@@ -92,6 +92,7 @@ Version 1.5
  - Add NorthQ  NQ-9021 Power Reader config file  (Nechry)
  - Add Z-Wave.Me ZME_064381 Wall Plug switch Schuko (IP44) - Gen 5 (Nechry)
  - Add Z-Wave.Me Z-Uno (Nechry)
+ - Pull Request #969 - Neo Coolcam Power Plug from LouiS22 (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
